Add endpoints for creating authors and books; display homepage with book title, author, and cover

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  </head>
-  <body>
+</head>
+<body>
 
-    {% for book in books %}
-    <div> <h3>{{ book.title }}</h3>
-    </div>
-    {% endfor %}
+{% for book in books %}
+<div>
+  <h3>{{ book.title }} - {{ book.author.name }}</h3>
+  <img src="https://covers.openlibrary.org/b/isbn/{{ book.isbn }}-M.jpg" alt="Cover for {{ book.title }}">
+</div>
+{% endfor %}
 
-  </body>
+</body>
 </html>
