--- a/templates/add_book.html
+++ b/templates/add_book.html
@@ -1,15 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  </head>
-  <body>
+</head>
+<body>
 
-  <form action="/add_author" method="POST">
-  <!-- Add the form here -->
-  </form>
+<form action="/add_book" method="POST">
+    <label for="isbn">Book ISBN:</label>
+    <input type="text" id="isbn" name="isbn" required><br><br>
 
-  </body>
+    <label for="title">Title:</label>
+    <input type="text" id="title" name="title" required><br><br>
+
+    <label for="publication_year">Publication year:</label>
+    <input type="text" id="publication_year" name="publication_year" pattern="\d{4}" placeholder="YYYY" required><br><br>
+
+    <label for="author_id">Author:</label>
+    <select id="author_id" name="author_id" required>
+        <option value="">-- Select an Author --</option>
+        {% for author in authors %}
+        <option value="{{ author.id }}">{{ author.name }}</option>
+        {% endfor %}
+    </select><br><br>
+
+    <input type="submit" value="Add Book">
+
+</form>
+
+
+
+
+</body>
 </html>
