--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,14 @@
 </head>
 <body>
 
+<form method="get" action="/">
+    <label for="sort_by">Sort by:</label>
+    <select name="sort_by" id="sort_by" onchange="this.form.submit()">
+      <option value="title" {% if request.args.get('sort_by') == 'title' %}selected{% endif %}>Title</option>
+      <option value="author" {% if request.args.get('sort_by') == 'author' %}selected{% endif %}>Author</option>
+    </select>
+  </form>
+
 {% for book in books %}
 <div>
   <h3>{{ book.title }} - {{ book.author.name }}</h3>
